# trade

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt  vault.json  技术优化方案.md
.obsidian/: workspace.json
00-系统/: SKILL.md  交易系统v1.4.md  使用指南.md  自动化方案.md
02-日志/: 2026-04-07.md  2026-04-10.md  2026-04-13.md  YYYY-MM-DD.md
03-复盘/: YYYY-W##-周复盘.md
04-选股/: 核心池.md  观察池.md
agent/: AGENT_PROMPT.md  CONTEXT.md
config/: astock_trading_crontab_v2  hermes_crontab  hermes_crontab_v2  mcp_server.yaml  notification.yaml  paths.yaml  stocks.yaml  strategy.yaml
docs/: AGENT_PLAYBOOK.md  ARCHITECTURE.md  HERMES_AGENT_PROMPT.md  OPENCLAW_INTEGRATION.md  ROADMAP_P1_P3.md  ROADMAP_P4_EVOLUTION.md  TASK_TRACKER.md  trading-system-logo.excalidraw  选股评分逻辑.md
scripts/: akshare_data.py  backtest.py  batch_detail.py  blacklist_filter.py  calculator.py  crontab.txt  daily_routine.py  format_report.py  hermes_cron.sh  holidays.py  parser.py  scorer.py  screen_pool.py  send-discord.sh  stock_screener_pipeline.py  trading-agent-launcher.sh  trading-agent.py  trading-cron.sh
tests/: conftest.py  test_alert_center.py  test_backtest_engine.py  test_backtest_runner.py  test_cli_json_contracts.py  test_config.py  test_discord_push.py  test_event_store.py  test_extended_params.py  test_historical_pipeline.py  test_morning_news.py  test_order_confirmation.py  test_order_state.py  test_p0_state.py  test_pipeline_market_history.py  test_pool_action_history.py  test_portfolio_ledger.py  test_portfolio_risk.py  test_risk.py  test_scorer.py  test_shadow_order_flow.py  test_signal_bus.py  (+5 more)
(+436 files in other folders)
