[project]
name = "hermes-trade"
version = "2.0.0-alpha"
description = "A股量化交易系统 — 模块化单体 + SQLite 事件内核"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13",
    "akshare>=1.18",
    "baostock>=0.8.9",
    "httpx>=0.28",
    "mcp>=1.0",
    "numpy>=2.0",
    "openai>=2.0",
    "pandas>=2.2",
    "pydash>=8.0",
    "pyyaml>=6.0",
    "requests>=2.33",
    "rich>=14.0",
    "pydantic>=2.7",
    "typer>=0.12",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.4",
]

[project.scripts]
hermes = "hermes.platform.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
